# newsbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  FUNCIONALIDADES.md  TASK_PROPOSALS.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  run_tests.sh  validate_extraction.py
alembic/: env.py
collector/: article_extractor.py  dedup.py  rss_fetcher.py  sources.py
config/: settings.py  time_utils.py
core/: __init__.py  periods.py  retry.py  whatsapp_identity.py
db/: engine.py  models.py
delivery/: message_formatter.py  rate_limiter.py  whatsapp_sender.py
interactions/: admin_auth.py  command_handlers.py  command_router.py  dashboard_data.py  drilldown_handler.py  messages.py  question_handler.py  subscriber_manager.py  webhook_handler.py
processor/: categorizer.py  llm_client.py  llm_config.py  prompts.py  summarizer.py  summary_format.py
refatoracao-txts/: PROGRESSO-REFATORACAO.md  plano-refatoracao.md  review1.txt  review2.txt  review3.txt  review4.txt
routers/: __init__.py  admin_api.py  dashboard.py  pipeline.py  webhook.py
scheduler/: jobs.py  step_runner.py
schemas/: webhook.py
static/: dashboard-extra.js  dashboard.css  dashboard.html  data-provider.js  mock-data.js
tests/: conftest.py  test_article_extractor.py  test_categorizer.py  test_command_router.py  test_llm_client.py  test_llm_config.py  test_message_formatter.py  test_periods.py  test_regressions.py  test_rss_fetcher.py  test_step_runner.py  test_summarizer.py  test_webhook.py  test_whatsapp_identity.py  test_whatsapp_sender.py
whatsapp-bridge/: .dockerignore  Dockerfile  index.js  (+3 more)
(+8 files in other folders)
